# es_demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
demo/: __init__.py  download.py  es.py  ingest.py  query.py  supress_warnings.py
demo/indices/: pbcore_full_v1.py
eck_stack/: elasticsearch.yml
