[project]
name = "es_demo"
version = "0.1.0"
description = "Code for Elasticsearch demo"
authors = [
    {name = "Andrew Myers", email = "andrew_myers@wgbh.org"},
]

requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = ["elasticsearch>=8.17.1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
